[package]
name = "veml6040"
version = "0.1.1" # remember to update html_root_url
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/veml6040-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the VEML6040 RGBW color light sensor."
readme = "README.md"
keywords = ["color", "sensor", "i2c", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/veml6040-rs"
documentation = "https://docs.rs/veml6040"
edition = "2018"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]

[features]
default = ["std"]
std = []

[dependencies]
embedded-hal = "0.2"
log = { version = "0.4.20", features = ["max_level_debug", "release_max_level_info"] }

[dev-dependencies]
linux-embedded-hal = "0.3"
embedded-hal-mock = "0.7"

[profile.release]
lto = true
